feat: add get attractions with medias